# quantlab

./: .gitignore  PROJECT_STRUCTURE.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: ADVANCED_GREEKS_INTEGRATION_PLAN.md  BACKTEST_VISUALIZATION_SUMMARY.md  CLI_CHART_INTEGRATION_SUMMARY.md  CLI_VISUALIZATION_SUMMARY.md  GREEKS_FORECAST_COMMAND_PLAN.md  GREEKS_INTEGRATION_PLAN.md  OPTIONS_ANALYSIS_REVIEW.md  OPTIONS_CHARTS_SUMMARY.md  PARQUET_READER_FIX_TOO_MANY_FILES.md  PHASE_4_COMPLETE.md  PHASE_4_PLAN.md  PHASE_4_PROGRESS_SUMMARY.md  PHASE_5_COMPLETE.md  PHASE_5_PLAN.md  PLOTLY_VISUALIZATION_IMPLEMENTATION_SUMMARY.md  PLOTLY_VISUALIZATION_MASTER_PLAN.md  PRICE_CHARTS_SUMMARY.md  QUANTLAB_CLI_EXPLORATION.md  STRATEGY_BUILDER_IV_EXPANSION_PLAN.md  TECHNICAL_CHARTS_IMPLEMENTATION_SUMMARY.md  VISUALIZATION_COMPLETE_SUMMARY.md  VISUALIZATION_OPPORTUNITIES_INVENTORY.md  VISUALIZATION_SCAN_SUMMARY.txt
docs/source/: conf.py
example/: RELATED_STOCKS_METHODS.md  USE_CASES_BRAINSTORM.md  YFINANCE_DATA_MAPPING.md  find_ai_stocks_alternative.py  find_ai_stocks_expanded.py  find_profitable_smallcap_ai.py  find_related_stocks.py  profitable_ai_stocks.csv  profitable_smallcap_ai.csv  test_orcl.py  test_yfinance_data.py
example/profitable_smallcap_ai/: OPTIMIZATIONS.md  PROGRAMMATIC_SCREENER_EXPLAINED.md  QUICKSTART.md  README.md  SUMMARY.md  YFINANCE_RATE_LIMITS.md  main.py  screener.py  sentiment_analysis.py  technical_analysis.py  test_yfinance_download.py
example/profitable_smallcap_ai/data/: screened_stocks_20251017.csv
quantlab/cli/: data.py
quantlab/data/: api_clients.py  data_manager.py  parquet_reader.py
